# backend/app/Http/Requests/Api/V1/Task/UpdateTaskRequest.php
@@ -1,0 +1,38 @@
+<?php
+
+namespace App\Http\Requests\Api\V1\Task;
+
+use App\Enums\TaskStatus;
+use Illuminate\Foundation\Http\FormRequest;
+use Illuminate\Validation\Rule;
+
+class UpdateTaskRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, \Illuminate\Contracts\Validation\ValidationRule|array<mixed>|string>
+     */
+    public function rules(): array
+    {
+        return [
+            'title' => ['sometimes', 'required', 'string', 'max:255'],
+            'description' => ['sometimes', 'string', 'nullable'],
+            'status' => [
+                'sometimes',
+                'required',
+                'string',
+                Rule::in(TaskStatus::values())
+            ],
+            'order' => ['sometimes', 'required', 'integer', 'min:0'],
+        ];
+    }
+}
